Add mybatis mapper examples
